--- a/themes/shoka/layout/_partials/footer.njk
+++ b/themes/shoka/layout/_partials/footer.njk
@@ -24,6 +24,8 @@
   </div>
   {%- endif %}
 
+  <a href="https://icp.gov.moe/?keyword=20220927" target="_blank">萌ICP备20220927号</a>
+
   {%- if theme.footer.powered %}
   <div class="powered-by">
     {{ __('footer.powered', _url('https://hexo.io', 'Hexo') + ' & Theme.' + _url('https://github.com/amehime/hexo-theme-shoka', 'Shoka')) }}
