--- a/themes/shoka/layout/_partials/footer.njk
+++ b/themes/shoka/layout/_partials/footer.njk
@@ -24,7 +24,10 @@
   </div>
   {%- endif %}
 
+  <div>
+  <i class="ic i-tag"></i>
   <a href="https://icp.gov.moe/?keyword=20220927" target="_blank">萌ICP备20220927号</a>
+  </div>
 
   {%- if theme.footer.powered %}
   <div class="powered-by">
