--- a/themes/shoka/layout/_macro/comment.njk
+++ b/themes/shoka/layout/_macro/comment.njk
@@ -3,7 +3,7 @@
   <div class="wrap" id="comments"></div>
 {%- elif ( page.comment !== false ) and ( theme.twikoo.enable !== false ) %}
   <div id="tcomment"></div>
-  <script src="https://cdn.jsdelivr.net/npm/twikoo@1.5.11/dist/twikoo.all.min.js"></script>
+  <script src="https://cdn.staticfile.org/twikoo/1.5.11/twikoo.all.min.js"></script>
   <script>
   twikoo.init({
     envId: '{{ theme.twikoo.envId }}', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
