--- a/themes/shoka/layout/_partials/head/head.njk
+++ b/themes/shoka/layout/_partials/head/head.njk
@@ -43,3 +43,7 @@
 {{ _vendor_font() }}
 
 {{ _css('app.css') }}
+
+{%- if theme.twikoo.enable %}
+  <script src="https://cdn.jsdelivr.net/npm/twikoo@1.5.11/dist/twikoo.all.min.js"></script>
+{%- endif %}
