--- a/themes/shoka/layout/_partials/layout.njk
+++ b/themes/shoka/layout/_partials/layout.njk
@@ -150,5 +150,9 @@
 
 {{ partial('_partials/third-party/baidu-analytics.njk', {}, {cache: true}) }}
 
+{%- if theme.twikoo.enable %}
+  <script src="https://cdn.jsdelivr.net/npm/twikoo@1.5.11/dist/twikoo.all.min.js"></script>
+{%- endif %}
+
 </body>
 </html>
