--- a/themes/shoka/layout/_macro/comment.njk
+++ b/themes/shoka/layout/_macro/comment.njk
@@ -1,8 +1,5 @@
 {% macro render() %}
-{%- if ( page.comment !== false ) and ( theme.valine.enable !== false ) %}
+{%- if page.comment !== false %}
   <div class="wrap" id="comments"></div>
-{%- elif ( page.comment !== false ) and ( theme.twikoo.enable !== false ) %}
-  <div id="tcomment"></div>
-  <button onclick="twikoo.init({envId: '{{ theme.twikoo.envId }}', el: '#tcomment', lang: '{{ theme.twikoo.lang }}'})">Comments</button>
 {%- endif %}
 {% endmacro %}
