--- a/themes/shoka/layout/_macro/comment.njk
+++ b/themes/shoka/layout/_macro/comment.njk
@@ -1,5 +1,6 @@
 {% macro render() %}
 {%- if page.comment !== false %}
   <div class="wrap" id="comments"></div>
+  <div id="webmentions"></div>
 {%- endif %}
 {% endmacro %}
