--- a/themes/shoka/layout/_macro/comment.njk
+++ b/themes/shoka/layout/_macro/comment.njk
@@ -2,5 +2,6 @@
 {%- if page.comment !== false %}
   <div class="wrap" id="comments"></div>
   <div id="webmentions"></div>
+  <script src="https://cdn.jsdelivr.net/npm/webmention.js@0.5.1/static/webmention.min.js"></script>
 {%- endif %}
 {% endmacro %}
