--- a/themes/shoka/layout/_partials/head/head.njk
+++ b/themes/shoka/layout/_partials/head/head.njk
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
 <meta name="theme-color" content="#FFF">
 <link rel="me" href="https://github.com/Mirakelor">
+<a href="https://monocle.js.org/" class="h-card" rel="me">Mirakelor</a>
 <link rel="webmention" href="https://webmention.io/monocle.js.org/webmention" />
 <link rel="pingback" href="https://webmention.io/monocle.js.org/xmlrpc" />
 
