--- a/themes/shoka/layout/_partials/layout.njk
+++ b/themes/shoka/layout/_partials/layout.njk
@@ -10,6 +10,10 @@
   <title>{% block title %}{% endblock %}{{ alternate + " = " if alternate }}{{ title }}</title>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage">
+  <div class="h-card" style="display: none">
+    <img class="u-photo" src="/images/%E5%A4%B4%E5%83%8F%20(19).jpg" alt="帅气的Mirakelor" />
+    <p class="p-note">拨动时光的指针~</p>
+  </div>
   <div id="loading">
     <div class="cat">
       <div class="body"></div>
