--- a/themes/shoka/layout/_partials/layout.njk
+++ b/themes/shoka/layout/_partials/layout.njk
@@ -11,6 +11,7 @@
 </head>
 <body itemscope itemtype="http://schema.org/WebPage">
   <div class="h-card" style="display: none">
+    <a href="http://monocle.js.org/" class="u-url u-uid" rel="me">Mirakelor</a>
     <img class="u-photo" src="/images/%E5%A4%B4%E5%83%8F%20(19).jpg" alt="帅气的Mirakelor" />
     <p class="p-note">拨动时光的指针~</p>
   </div>
