--- a/themes/shoka/layout/_partials/post/post.njk
+++ b/themes/shoka/layout/_partials/post/post.njk
@@ -1,8 +1,8 @@
 <article itemscope itemtype="http://schema.org/Article" class="post block h-entry" lang="{{ post.lang or config.language }}">
   <link itemprop="mainEntityOfPage" class="u-url" href="{{ post.permalink }}">
   <time hidden itemprop="dateCreated datePublished" class="dt-published" datetime="{{ moment(item.date).format() }}">{{ date(item.date) }}</time>
-  <div hidden class="h-card">
-    <a href="http://monocle.js.org/" class="u-url u-uid" rel="me">Mirakelor</a>
+  <div hidden class="h-card p-author">
+    <a href="http://monocle.js.org/" class="u-url u-uid" rel="me author">Mirakelor</a>
     <img class="u-photo" src="/images/%E5%A4%B4%E5%83%8F%20(19).jpg" alt="帅气的Mirakelor" />
     <p class="p-note">拨动时光的指针~</p>
   </div>
