--- a/themes/shoka/layout/_macro/comment.njk
+++ b/themes/shoka/layout/_macro/comment.njk
@@ -8,7 +8,7 @@
     border-radius: 1rem;
     border-color: rgba(233,84,107,0.5);
     margin-bottom: 0.5rem;
-    margin-left: 10px;"></div>
+    margin-left: 10px;margin-right: 10px;"></div>
   {%- endif %}
   <div class="wrap" id="comments"></div>
   <script>
